# passvault

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/: TODO.md
docs/coursework/: 01-introduction.tex  02-espd.tex  03-realisation.tex  04-examples.tex  coursework.bcf  coursework.blg  coursework.out  coursework.tex  coursework.toc
headers/: secrets.hpp  vault.hpp
sources/: passvault.cpp  secrets.cpp  vault.cpp
